# arcade

./: CMakeLists.txt  Doxyfile  README-DEV-IDISPLAY.md  README-DEV-IGAME.md  README.md
core/include/: Arcade.hpp  Display.hpp  Game.hpp
core/src/: Arcade.cpp  Display.cpp  Game.cpp  main.cpp
docs/html/: Arcade_8cpp.html  Arcade_8cpp__incl.map  Arcade_8cpp__incl.md5  Arcade_8hpp.html  Arcade_8hpp__dep__incl.map  Arcade_8hpp__dep__incl.md5  Arcade_8hpp__incl.map  Arcade_8hpp__incl.md5  Arcade_8hpp_source.html  DisplayVariable_8hpp.html  DisplayVariable_8hpp__dep__incl.map  DisplayVariable_8hpp__dep__incl.md5  DisplayVariable_8hpp__incl.map  DisplayVariable_8hpp__incl.md5  DisplayVariable_8hpp_source.html  Display_8cpp.html  Display_8cpp__incl.map  Display_8cpp__incl.md5  Display_8hpp.html  Display_8hpp__dep__incl.map  Display_8hpp__dep__incl.md5  Display_8hpp__incl.map  Display_8hpp__incl.md5  Display_8hpp_source.html  DlLoader_8cpp.html  DlLoader_8cpp__incl.map  DlLoader_8cpp__incl.md5  DlLoader_8hpp.html  DlLoader_8hpp__dep__incl.map  DlLoader_8hpp__dep__incl.md5  DlLoader_8hpp__incl.map  DlLoader_8hpp__incl.md5  DlLoader_8hpp_source.html  GameMatrix_8hpp.html  GameMatrix_8hpp__dep__incl.map  GameMatrix_8hpp__dep__incl.md5  GameMatrix_8hpp__incl.map  GameMatrix_8hpp__incl.md5  GameMatrix_8hpp_source.html  Game_8cpp.html  (+477 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+85 more)
docs/latex/: Arcade_8cpp.tex  Arcade_8cpp__incl.md5  Arcade_8hpp.tex  Arcade_8hpp__dep__incl.md5  Arcade_8hpp__incl.md5  Arcade_8hpp_source.tex  DisplayVariable_8hpp.tex  DisplayVariable_8hpp__dep__incl.md5  DisplayVariable_8hpp__incl.md5  DisplayVariable_8hpp_source.tex  Display_8cpp.tex  Display_8cpp__incl.md5  Display_8hpp.tex  Display_8hpp__dep__incl.md5  Display_8hpp__incl.md5  Display_8hpp_source.tex  DlLoader_8cpp.tex  DlLoader_8cpp__incl.md5  DlLoader_8hpp.tex  DlLoader_8hpp__dep__incl.md5  DlLoader_8hpp__incl.md5  DlLoader_8hpp_source.tex  GameMatrix_8hpp.tex  GameMatrix_8hpp__dep__incl.md5  GameMatrix_8hpp__incl.md5  GameMatrix_8hpp_source.tex  Game_8cpp.tex  Game_8cpp__incl.md5  Game_8hpp.tex  Game_8hpp__dep__incl.md5  Game_8hpp__incl.md5  Game_8hpp_source.tex  IDisplay_8hpp.tex  IDisplay_8hpp__dep__incl.md5  IDisplay_8hpp__incl.md5  IDisplay_8hpp_source.tex  IGame_8hpp.tex  IGame_8hpp__dep__incl.md5  IGame_8hpp__incl.md5  IGame_8hpp_source.tex  (+206 more)
games/Menu/include/: Menu.hpp  MenuUtils.hpp
games/Menu/src/: Menu.cpp  MenuUtils.cpp
games/MineSweeper/include/: MineSweeper.hpp
games/MineSweeper/src/: MineSweeper.cpp  symEntry.cpp
games/Snake/assets/wild-jungle-font/: info.txt
games/Snake/include/: Snake.hpp
games/Snake/src/: Snake.cpp
graphics/Ncurses/include/: Ncurses.hpp
graphics/Ncurses/src/: Ncurses.cpp
graphics/SDL2/include/: SDL2.hpp
graphics/SDL2/src/: SDL2.cpp
graphics/SFML/include/: SFML.hpp
graphics/SFML/src/: SFML.cpp
shared/include/: DisplayVariable.hpp  DlLoader.hpp  GameMatrix.hpp  IDisplay.hpp  IGame.hpp  Keys.hpp  Utils.hpp  gfx.hpp  shape.hpp
shared/src/: DlLoader.cpp  Utils.cpp
tests/: test_core.cpp  test_gameMatrix.cpp  test_minesweeper.cpp  test_shared.cpp  test_snake.cpp
tests/libdisplay_mock/: lib_display_mock.cpp  lib_display_mock.hpp
tests/libgame_mock/: lib_game_mock.cpp  lib_game_mock.hpp
tests/libtest/: lib_test.cpp  lib_test.hpp
